2003-06-10  Alasdair Allan <aa@astro.ex.ac.uk>

         * Parse.pm: Fixed ra() and dec() which were incorrectly looking
           for a 'tag_value' keyword inside the Coordinates subtag.
           
2003-06-03  Alasdair Allan <aa@astro.ex.ac.uk>

        * Build.pm: Added support for Signal-to-noise requests in addition
          to straight exposure time requests. Removed freeze() function.

        * Parse.pm: Added support for Signal-to-noise.
            
        * RTML.pm: Added support for RTML documents from scalars as well as
          from a file.
                    
2002-03-29  Alasdair Allan <aa@astro.ex.ac.uk>

        * Added freeze() functions for persistent store
        
2002-03-28  Alasdair Allan <aa@astro.ex.ac.uk>

        * Parse.pm: Added a whole bunch of query methods needed by
          the IA to rebuild follow on requests.
          
2002-03-22  Alasdair Allan <aa@astro.ex.ac.uk>

        * Working version, ready to ship as an alpha.
        
2002-03-18  Alasdair Allan <aa@astro.ex.ac.uk>

        * Working system which will move the telescope, when combined
          with eSTAR::IO modules. Added observation.pl and server.pl
          scripts to module (should make separate?).
          
        * Build.pm: Minmal set of tags should be in palce.
          
2002-03-17  Alasdair Allan <aa@astro.ex.ac.uk>

        * Build.pm: Basic RTML construction for "score" and "request"
          documents in place.
          
        * Parse.pm: Added score() and time() methods needed to build
          the observing request RTML message.  

2002-03-17  Alasdair Allan <aa@astro.ex.ac.uk>

        * Parse.pm: Parsing routine folded back so that no tags need mentioned
          specifically by name, should now parse RTML reliably without missing
          any "suprise" tags. However the parsing routine isn't properly
          recursive so it will run out of steam four levels down the tree.