@@ -1,7 +1,8 @@
 2003-06-10  Alasdair Allan <aa@astro.ex.ac.uk>
 
          * Parse.pm: Fixed ra() and dec() which were incorrectly looking
-           for a 'tag_value' keyword inside the Coordinates subtag.
+           for a 'tag_value' keyword inside the Coordinates subtag. Added
+           flux() method.
            
 2003-06-03  Alasdair Allan <aa@astro.ex.ac.uk>
 
